--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 body{
     background-color: #121212;
+    color: #fff;
     font-family: 'Raleway', sans-serif;
 }
 .container{
@@ -16,7 +17,6 @@ body{
     height: 100vh;
 }
 .banner-left{
-    color: #fff;
     flex: 1;
     display: flex;
     align-items: center;
@@ -34,13 +34,13 @@ body{
     font-size: 60px;
     white-space: nowrap;
     position: relative;
-    color: transparent;
+
 }
 .banner-title::before{
     content: 'Programming hero';
     position: absolute;
-    top: 0px;
     left: 0px;
+    right: 0px;
     color: #22bedd;
     animation: typing 3s linear infinite;
 }
@@ -153,7 +153,7 @@ body{
     margin: 20px 0px;
 }
 .love-button{
-    outline: 0;
+    outline: none;
     font-size: 18px;
     padding: 10px 30px;
     background-color: #22bedd;
@@ -192,14 +192,19 @@ body{
     overflow: hidden;
 }
 .photo img{
+    position: absolute;
+    left: 0px;
+    top: 0px;
     height: 100%;
     width: 100%;
     object-fit: cover;
+    z-index: 1;
 }
 .border{
     background-color: #fff;
     position: absolute;
     transition: .7s ease-in-out;
+    z-index: 2;
 }
 .border.top,.border.bottom{
     height: 4px;
@@ -242,24 +247,26 @@ body{
     width: 100%;
     height: 100%;
     left: 30px;
-    top: 400px;
+    top: 100%;
+    z-index: 3;
     transition: .3s ease-out;
 }
 .photo:hover .photo-content{
-    top: 200px;
+    top: 180px;
 }
-.photo::before{
+.photo::after{
     content: " ";
-    height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    height: 100%;
     position: absolute;
     left: 0px;
     top: 0px;
+    background-color: rgba(0, 0, 0, .5);
     opacity: 0;
-    transition: .3s linear;
+    z-index: 4;
 }
-.photo:hover::before{
+.photo:hover.photo::after{
     opacity: 1;
 }
+
 
